# tree-sitter-klog

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  example.klg  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-klog.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_klog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKlog/: klog.h
bindings/swift/TreeSitterKlogTests/: TreeSitterKlogTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: records.txt
