[package]
name = "tree-sitter-klog"
description = "tree-sitter parser for the klog time-tracking language"
version = "0.1.0"
authors = ["Björn Ganslandt <hi@ganslandt.xyz>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "klog"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ansimorph/tree-sitter-klog"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
